--- a/styles/style.css
+++ b/styles/style.css
@@ -76,3 +76,16 @@ body{
 .banner-img-details{
     padding-right: 163px;
 }
+
+
+
+/* ------------------------------------
+                            brand style 
+---------------------------------------------------- */
+.brand-info{
+    display: flex;
+    gap: 60px;
+    padding-left: 170px;
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
